# WinNative

.github/workflows/: pr-ci.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/app/shell/: Eyeglasses2Icon.kt  LibraryGameLaunchScreen.kt  UnifiedActivity.kt
app/src/main/assets/metadata/: startmenu.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/wn-libsteamclient/: CMakeLists.txt
app/src/main/cpp/wn-libsteamclient/include/wn_libsteamclient/: callback_registry.h  callbacks.h  runtime_state.h  tcp_services.h
app/src/main/cpp/wn-libsteamclient/rust/: Cargo.toml  exports.lds
app/src/main/cpp/wn-libsteamclient/rust/src/: api_entry.rs  bridge.rs  callback_registry.rs  callbacks.rs  client.rs  iclient_engine.rs  jni_pushed_state.rs  lib.rs  log.rs  state.rs  tcp_services.rs  vtable.rs
app/src/main/cpp/wn-libsteamclient/rust/src/iface/: isteam_app_list.rs  isteam_apps.rs  isteam_friends.rs  isteam_game_server.rs  isteam_html_surface.rs  isteam_input.rs  isteam_inventory.rs  isteam_matchmaking.rs  isteam_matchmaking_servers.rs  isteam_music.rs  isteam_music_remote.rs  isteam_networking.rs  isteam_networking_messages.rs  isteam_networking_sockets.rs  isteam_networking_utils.rs  isteam_parental.rs  isteam_parties.rs  isteam_remote_play.rs  isteam_remote_storage.rs  isteam_screenshots.rs  isteam_ugc.rs  isteam_user.rs  isteam_user_stats.rs  isteam_utils.rs  isteam_video.rs  mod.rs
app/src/main/cpp/wn-libsteamclient/rust/tests/: exported_symbols.golden  exported_symbols.rs  vtable_layout.rs
app/src/main/cpp/wn-libsteamclient/src/: api_entry.cpp  callback_registry.cpp  iclient_engine.cpp  isteam_client.cpp  isteam_stubs.cpp  jni_pushed_state.cpp  runtime_state.cpp  tcp_services.cpp
app/src/main/cpp/wn-steam-bootstrap/src/: steam_bootstrap.cpp
app/src/main/cpp/wn-steam-client/: CMakeLists.txt
app/src/main/cpp/wn-steam-client/jni/: wn_session_jni.cpp  wn_steam_jni.cpp
app/src/main/cpp/wn-steam-client/rust/: Cargo.toml
app/src/main/cpp/wn-steam-client/rust/src/: auth_session.rs  cdn_client.rs  cm_bridge.rs  cm_client.rs  cm_runtime.rs  depot_downloader.rs  depot_writer.rs  jni.rs  vdf.rs
app/src/main/cpp/wn-steam-client/src/: auth_session.cpp  cm_bridge.cpp  cm_client.cpp  wn_library_store.cpp
app/src/main/cpp/wn-steam-launcher/: build.sh  clean_shutdown.cpp  clean_shutdown.h
app/src/main/cpp/wn-steam-launcher/src/: main.cpp
app/src/main/cpp/wn-steamapi-bridge/: CMakeLists.txt  build.sh  gen_overrides.py  steam_api_bridge.c  steam_api_bridge_callbacks.c  steam_api_bridge_flat.c  steam_api_bridge_lifecycle.c  steam_api_bridge_overrides.c  steam_api_bridge_steamclient.c
app/src/main/feature/settings/containers/: ContainerSettingsComposeDialog.kt
app/src/main/feature/settings/contents/: ComponentsScreen.kt
app/src/main/feature/settings/debug/: DebugFragment.kt  DebugScreen.kt
app/src/main/feature/settings/input/: InputControlsFragment.kt  InputControlsScreen.kt
app/src/main/feature/settings/other/: OtherSettingsFragment.kt  OtherSettingsScreen.kt
app/src/main/feature/shortcuts/: ShortcutSettingsComposeDialog.kt
app/src/main/feature/steamcloudsync/: SteamAutoCloud.kt  SteamCloudHistoryProvider.kt  SteamCloudSyncHelper.kt  SteamExitCloudSync.kt  SteamLaunchCloudSync.kt  SteamLauncherConflictWatcher.kt  SteamSaveSnapshotManager.kt
app/src/main/feature/sync/: CloudSyncHelper.kt  EpicCloudConflictUi.kt  EpicLaunchCloudSync.kt  GogCloudConflictUi.kt  GogLaunchCloudSync.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/runtime/container/: Container.java  ContainerCreation.kt  ContainerManager.java
app/src/main/runtime/display/: ExternalDisplayController.java  GlassesManager.kt  PerformanceHud.kt  VitureGlasses.kt  XServerDisplayActivity.java  XServerDisplayHost.kt  XServerDrawerMenu.kt
app/src/main/runtime/system/: ProcessHelper.java
app/src/main/shared/io/: FileUtils.java
(+62 files in other folders)
