[package]
name = "wnsteam"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
crc32fast = "1"
hmac = "0.12"
jni = "0.21"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
lzma-rs = { version = "0.3", features = ["raw_decoder"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
rsa = "0.9"
ruzstd = "0.7"
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tungstenite = { version = "0.26", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
zeroize = "1"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
